# ADAPT

./: README.md  pyproject.toml
adapt/: config.py
adapt/data/: datasets.py  manifest.py  prepare_clips.py  sampler.py  transforms.py
adapt/engine/: evaluator.py  infer.py  metrics.py  schedule.py  trainer.py
adapt/losses/: intent_loss.py
adapt/models/: adapt.py  cmga.py  mfe.py  scma.py  swin_vfe.py  tff.py
adapt/utils/: checkpoint.py  distributed.py  logging.py  seed.py
configs/: base.yaml  jaad_all.yaml  jaad_beh.yaml  pie.yaml
scripts/: eval.py  infer.py  train.py
